fixed: excess overflow

--- a/client/zen/src/index.css
+++ b/client/zen/src/index.css
@@ -7,6 +7,7 @@
   margin: 0;
   outline: none;
   padding: 0;
+  overflow-x: hidden;
 }
 
 .logo{
